# newage-agent-aquarium

./: .gitignore  compose.yaml  injestion.py  main.py  nodes.py  pyproject.toml  react.py  server.py  urls.txt
graph/: __init__.py  consts.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  relevance_grader.py  router.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  initialize.py  injest.py  retrieve.py  summarize.py  web_search.py
helper/: web_to_documents.py
llms/: local_llm_gemma.py  local_llm_qwen3_6.py  local_net_llm_gemma.py
