[project]
name = "newage-agent-aquarium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.14.3",
    "uvicorn>=0.47.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-community>=0.4.2",
    "beautifulsoup4>=4.14.3",
    "langsmith>=0.8.5",
    "black>=26.5.1",
    "isort>=8.0.1",
]
